--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="w3-light-grey" cz-shortcut-listen="true">
 
 <!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<div class="w3-content w3-margin-top" style="max-width:900px;">
 
     <!-- The Grid -->
     <div class="w3-row-padding">
@@ -31,56 +31,59 @@
         <div class="w3-third">
 
             <div class="w3-white w3-text-grey w3-card-4">
-                <!-- @falvojr: This container has been modified to not use a profile picture. -->
-                <div class="w3-container">
-                    <img src="https://github.com/JardelLimaDev/POO/assets/98830508/92387db0-8c97-4837-aa1c-4b387f70fbfc" width=250 height=250>
+                <div class="w3-display-container">
+                    <img src="https://github.com/JardelLimaDev/POO/assets/98830508/92387db0-8c97-4837-aa1c-4b387f70fbfc"
+                         width=250 height=350 style="width:100%" alt="Avatar">
+                    <div class="w3-display-bottomleft w3-container w3-text-black">
+                        <h2>Jardel Lima</h2>
+                    </div>
                 </div>
                 <div class="w3-container">
-                    <h2>TODO</h2>
-                </div>
-                <div class="w3-container">
-                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-                    <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
-                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>TODO</p>
+                    <p><i class="fa fa-university fa-fw w3-margin-right w3-large w3-text-teal"></i>Graduado em Análide
+                    e desenvolvimento de sistemas</p>
+                    <p><i class="fa fa-book fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudando | Java | Spring Framework
+                    | Angular | HTML | CSS | Cloud</p>
+                    <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Fortaleza - CE</p>
+                    <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jardeldelimagomes
+                        @gmail.com</p>
+                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>85 98583 6322</p>
                     <hr>
 
                     <p class="w3-large">
-                        <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                        <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Habilidades técnicas</b>
                     </p>
-                    <p>TODO</p>
+                    <p>Java</p>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+                    </div>
+                    <p>Spring Framework</p>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
                     </div>
-                    <p>TODO</p>
-                    <div class="w3-light-grey w3-round-xlarge w3-small">
-                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
-                    </div>
-                    <p>TODO</p>
+                    <p>HTML e CSS</p>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
                     </div>
-                    <p>TODO</p>
+                    <p>Cloud</p>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
-                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
                     </div>
                     <br>
 
                     <p class="w3-large w3-text-theme">
-                        <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                        <b><i class="fa fa-users fa-fw w3-margin-right w3-text-teal"></i>Habilidades interpessoais</b>
                     </p>
-                    <p>TODO</p>
+                    <p>Trabalho em Equipe</p>
                     <div class="w3-light-grey w3-round-xlarge">
-                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
                     </div>
-                    <p>TODO</p>
+                    <p>Proatividade</p>
                     <div class="w3-light-grey w3-round-xlarge">
-                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:85%"></div>
                     </div>
-                    <p>TODO</p>
+                    <p>Dinâmico</p>
                     <div class="w3-light-grey w3-round-xlarge">
-                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                        <div class="w3-round-xlarge w3-teal" style="height:24px;width:85%"></div>
                     </div>
                     <br>
                 </div>
@@ -94,7 +97,10 @@
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
                 <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-                <p>TODO</p>
+                <p>Tenho experiência em diversos segmentos empresariais, como redes de supermercados, construção civil e shopping centers.
+                    Atuando nos setores operacionais das empresas e áreas técnicas.
+                    Me formei em Analise e desenvolvimento de sistemas em 2022.2 e estou migrando de carreira, para a área de tecnologia
+                    focado em desenvolvimento de aplicações.</p>
             </div>
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -102,41 +108,63 @@
                     <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
                 </h2>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>TODO</b></h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro de 2019 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
-                    <p>TODO</p>
+                    <h5 class="w3-opacity"><b>BS Design Corporate Tower - Supervisor de Manutenção</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2021 - 10/2023</h6>
+                    <p>Realizar a gestão do setor de manutenção do condomínio empresarial,
+                        delegar e orientar as atividades técnicas para a equipe.</p>
                     <hr>
                 </div>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>TODO</b></h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-                    <p>TODO</p>
+                    <h5 class="w3-opacity"><b>Rio Mar Shopping - Encarregado de Supervisão Predial</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>03/2018 - 06/2021</h6>
+                    <p>Realizar a gestão estruturada do setor manutenção. Prevenção na edificação condomínio</p>
+                </div>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>MML Sistemas de Automação - Eletricista</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>11/2015 - 01/2018</h6>
+                    <p>Instalações de sistemas de automação, industrial e predial. Construção civil.</p>
+                </div>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>Rede Conecta Serviços de Rede - Instalador</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>05/2015 - 08/2015</h6>
+                    <p>Reparar equipamentos de computação em telefonia. Instalação, correção e prevenção em rede de telefonia móvel e internet</p>
+                </div>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>Expernet Telematica – Eletricista</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02/2014 - 12/2014</h6>
+                    <p>Construção civil</p>
                 </div>
             </div>
 
             <div class="w3-container w3-card w3-white">
                 <h2 class="w3-text-grey w3-padding-16">
-                    <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+                    <i class="fa fa-trophy fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Conquistas
                 </h2>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+                    <h5 class="w3-opacity"><b>Digital Innovation One (DIO) - Backend Java</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-clock-o fa-fw w3-margin-right"></i>88 h
+                        <!--- <span class="w3-tag w3-teal w3-round">Atual</span> ---></h6>
                     <p>
                         Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários.
                         A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências
-                        de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                        de ensino imersivas e com foco em empregabilidade. Nesse contexto, segue meu certificado:
                     </p>
                     <ul>
-                        <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">TODO</a></li>
-                        <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">TODO</a></li>
-                        <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">TODO</a></li>
+                        <li><a href="https://www.dio.me/certificate/19FC0F83" target="_blank">Certificado - Backend Java</a></li>
                     </ul>
                     <hr>
                 </div>
                 <div class="w3-container">
-                    <h5 class="w3-opacity"><b>TODO</b></h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1995</h6>
-                    <p>TODO</p>
+                    <h5 class="w3-opacity"><b>Ecola Técnica CEPEP - Técnico em Eletrotécnica</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-clock-o fa-fw w3-margin-right"></i>1600 h</h6>
+                </div>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>SENAI - Eletricista Industrial</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-clock-o fa-fw w3-margin-right"></i>528 h</h6>
+                </div>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><b>SENAC - Operações de supermecado</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-clock-o fa-fw w3-margin-right"></i>1920 h</h6>
                 </div>
             </div>
 
@@ -147,17 +175,45 @@
                 <div class="w3-container">
                     <h6 class="w3-text-teal">
                         <i class="fa fa-github fa-fw w3-margin-right"></i>
-                        <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                        <a href="https://github.com/JardelLimaDev/desafio.git" target="_blank">Publicando API REST na Nuvem Usando Spring Boot 3,
+                            Java 17 e Railway</a>
                     </h6>
-                    <p>TODO</p>
-                    <hr>
+                    <p>API REST para concluir o desafio do bootcamp Santander Wek BackEnd Java pela DIO 2023</p>
                 </div>
                 <div class="w3-container">
                     <h6 class="w3-text-teal">
-                        <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                        <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                        <i class="fa fa-github fa-fw w3-margin-right"></i>
+                        <a href="https://github.com/JardelLimaDev/Dio-desafio-padroes-de-projetos.git" target="_blank">Explorando Padrões de Projetos na Prática com Java</a>
                     </h6>
-                    <p>TODO</p>
+                    <p>Neste desafio elaborado pela DIO vimos três tipos de padrões de projetos.
+                        Padrão criacional, vimos o Singleton. Padrão estrutural, facade.
+                        E Padrão comportamental, foi visto o Strategy.
+                        Combinando teoria e prática, destes padrões, podemos pôr em prática os padrões de projetos em uma API REST com Spring.
+                        Como objetivo a alcançar, fomos desafiados a implementar um padrão de projeto que não foi abordado no módulo.
+                        O escolhido por mim foi o Abstract Factory
+                    </p>
+                </div>
+                <div class="w3-container">
+                    <h6 class="w3-text-teal">
+                        <i class="fa fa-github fa-fw w3-margin-right"></i>
+                        <a href="https://github.com/JardelLimaDev/DIO-desafio-diagrama-oUML-Classes-iPhone-.git" target="_blank">Programação Orientada a Objetos e UML:
+                            Diagramação de Classes do iPhone
+                        </a>
+                    </h6>
+                    <p>O projeto tem como objetivo colocar em prática habilidades adquiridas, em programação orientada a objetos,
+                        levantamento de requisitos e modelagem UML.
+                        Com a proposta de representar alguns papéis do iPhone, foi realizado a diagramação das
+                        classes e interfaces de acordo com o desafio lançado pela DIO.
+                    </p>
+                </div>
+                 <div class="w3-container">
+                    <h6 class="w3-text-teal">
+                        <i class="fa fa-github fa-fw w3-margin-right"></i>
+                        <a href="https://github.com/JardelLimaDev/ContaBanco.git" target="_blank"> Simulando Uma Conta Bancária
+                            Através Do Terminal/Console
+                        </a>
+                    </h6>
+                    <p>Simulando uma conta bancária através do console</p>
                 </div>
             </div>
 
@@ -172,8 +228,9 @@
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>Minhas Redes Sociais</p>
-    <a href="https://github.com/JorgeSantosxp" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://www.linkedin.com/in/jorge-santos-41774793" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/JardelLimaDev" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/jardel-lima-" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://www.dio.me/users/jardeldelimagomes" target="_blank">DIO</a>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
