--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
         <!-- Left Column -->
         <div class="w3-third">
-
+            <div class="center">
+                <img class="photo" src="https://github.com/JardelLimaDev/POO/assets/98830508/92387db0-8c97-4837-aa1c-4b387f70fbfc"
+                     width=200 height=200 alt="foto perfil jardel">
+                <h2 class="text">Jardel Lima</h2>
+            </div>
             <div class="w3-white w3-text-grey w3-card-4">
                 <div class="w3-display-container">
                     <img src="https://github.com/JardelLimaDev/POO/assets/98830508/92387db0-8c97-4837-aa1c-4b387f70fbfc"
