--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="w3-light-grey" cz-shortcut-listen="true">
@@ -35,13 +35,6 @@
                 <h2 class="text">Jardel Lima</h2>
             </div>
             <div class="w3-white w3-text-grey w3-card-4">
-                <div class="w3-display-container">
-                    <img src="https://github.com/JardelLimaDev/POO/assets/98830508/92387db0-8c97-4837-aa1c-4b387f70fbfc"
-                         width=250 height=350 style="width:100%" alt="Avatar">
-                    <div class="w3-display-bottomleft w3-container w3-text-black">
-                        <h2>Jardel Lima</h2>
-                    </div>
-                </div>
                 <div class="w3-container">
                     <p><i class="fa fa-university fa-fw w3-margin-right w3-large w3-text-teal"></i>Graduado em Análide
                     e desenvolvimento de sistemas</p>
